fix: modal for adding item to playlist didn't work correctly on mobile.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -107,6 +107,9 @@ input[type="checkbox"] + label {
 }
 
 [data-bs-theme="dark"] {
+  .mobile-menubar {
+    background: rgba(0, 0, 0, 0.9);
+  }
   .card {
     background-color: rgba(255, 255, 255, 0.1);
   }
@@ -138,6 +141,9 @@ input[type="checkbox"] + label {
 }
 
 [data-bs-theme="light"] {
+  .mobile-menubar {
+    background: rgba(255, 255, 255, 0.9);
+  }
   .card {
     background-color: rgba(0, 0, 0, 0.05);
   }
